{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 34,
  "lineage": "f1ef9d12-051e-49b1-e564-cbcc90804ee7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "staging-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/instanceGroups/staging-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-05-08T22:53:44.988-07:00",
            "enable_cdn": false,
            "fingerprint": "A9yWaFxJGGA=",
            "generated_id": 4558474971654152455,
            "health_checks": [
              "projects/terraform-gcp-383907/global/httpsHealthChecks/staging-health"
            ],
            "id": "projects/terraform-gcp-383907/global/backendServices/staging-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "staging-service",
            "port_name": "https",
            "project": "terraform-gcp-383907",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/backendServices/staging-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_image.os-image",
            "google_compute_https_health_check.staging-health",
            "google_compute_instance.staging-vm",
            "google_compute_instance_group.staging-group",
            "google_compute_network.dev-nw-01",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-08T22:52:43.168-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-383907/global/firewalls/inbound-rule",
            "log_config": [],
            "name": "inbound-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "priority": 1,
            "project": "terraform-gcp-383907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/firewalls/inbound-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.dev-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-08T22:52:43.142-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-383907/global/firewalls/outbound",
            "log_config": [],
            "name": "outbound",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "priority": 1,
            "project": "terraform-gcp-383907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/firewalls/outbound",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.dev-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "staging-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-arm64-v20230429",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/disks/staging-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-383907/zones/us-central1-a/instances/staging-vm",
            "instance_id": "6849582613795201364",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "PPak5PCn-dc=",
            "name": "staging-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
                "network_ip": "192.168.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/public-sub01",
                "subnetwork_project": "terraform-gcp-383907"
              }
            ],
            "project": "terraform-gcp-383907",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/instances/staging-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_image.os-image",
            "google_compute_network.dev-nw-01",
            "google_compute_subnetwork.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "dev-nw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "mtu": 1440,
            "name": "dev-nw-01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "terraform-gcp-383907",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-08T22:52:43.124-07:00",
            "gateway_address": "192.168.0.1",
            "id": "projects/terraform-gcp-383907/regions/us-central1/subnetworks/public-sub01",
            "ip_cidr_range": "192.168.0.0/26",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "public-sub01",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-383907",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/public-sub01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.dev-nw-01"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}